[build-system]
build-backend = "hatchling.build"
requires = [
    "hatchling",
    "hatch-vcs",
    "semiwrap~=0.1",
    "hatch-meson~=0.1.0b2",
    "hatch-robotpy~=0.2.0",
    "wpilib~=2025.3.2.2",
]


[project]
name = "robotpy-urcl"
dynamic = ["version"]
description = "Python wrapper for FRC Team 6328's URCL library"
license = "MIT"
dependencies = [
    "wpilib~=2025.3.2.2",
]

[[project.authors]]
name = "RobotPy Development Team"
email = "robotpy@googlegroups.com"

[project.urls]
"Source code" = "https://github.com/robotpy/robotpy-urcl"


[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "urcl/version.py"

[tool.hatch.build.targets.wheel]
packages = ["urcl"]


[[tool.hatch.build.hooks.robotpy.maven_lib_download]]
artifact_id = "URCL-driver"
group_id = "org.littletonrobotics.urcl"
repo_url = "https://frcmaven.wpi.edu/artifactory/littletonrobotics-mvn-release"
version = "2025.0.1"
staticlibs = ["URCLDriver"]
extract_to = "lib"

[[tool.hatch.build.hooks.robotpy.maven_lib_download]]
artifact_id = "URCL-cpp"
group_id = "org.littletonrobotics.urcl"
repo_url = "https://frcmaven.wpi.edu/artifactory/littletonrobotics-mvn-release"
version = "2025.0.1"
staticlibs = ["URCL"]
extract_to = "lib"


[tool.hatch.build.hooks.semiwrap]

[tool.hatch.build.hooks.meson]


[tool.semiwrap]
update_init = ["urcl"]



[tool.semiwrap.extension_modules."urcl._urcl"]
name = "urcl"

depends = [
    "wpilib",
]

includes = [
    "lib/include"
]

[tool.semiwrap.extension_modules."urcl._urcl".headers]
URCL = "URCL.h"
